# polySymmetry

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  polySymmetry.mod
polySymmetry/plug-ins/: polySymmetry.mll
polySymmetry/plug-ins/windows-maya2014/: polySymmetry.mll
polySymmetry/plug-ins/windows-maya2015/: polySymmetry.mll
polySymmetry/plug-ins/windows-maya2016/: polySymmetry.mll
polySymmetry/plug-ins/windows-maya2017/: polySymmetry.mll
polySymmetry/scripts/polySymmetry/: __init__.py  commands.py  options.py  tools.py  utils.py
src/: meshData.cpp  meshData.h  parseArgs.cpp  parseArgs.h  pluginMain.cpp  polyChecksum.cpp  polyChecksum.h  polyChecksumCommand.cpp  polyChecksumCommand.h  polyDeformerWeights.cpp  polyDeformerWeights.h  polyFlipCmd.cpp  polyFlipCmd.h  polyMirrorCmd.cpp  polyMirrorCmd.h  polySkinWeights.cpp  polySkinWeights.h  polySymmetry.cpp  polySymmetry.h  polySymmetryCmd.cpp  polySymmetryCmd.h  polySymmetryNode.cpp  polySymmetryNode.h  polySymmetryTool.cpp  polySymmetryTool.h  sceneCache.cpp  sceneCache.h  selection.cpp  selection.h  util.cpp  util.h
